--- a/date/2025-03/index.htm
+++ b/date/2025-03/index.htm
@@ -113,6 +113,96 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-16">
+                            <div class="col-md-3">
+                                <a href="/news/article-75176.htm" class="xcblog-blog-url">
+                                    <img alt="动物疫苗运输注意事项及要求是什么（动物疫苗接种的注意事项包括有哪些内容）" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-75176.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        动物疫苗运输注意事项及要求是什么（动物疫苗接种的注意事项包括有哪些内容）                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈动物疫苗运输注意事项及要求是什么，以及动物疫苗接种的注意事项包括有哪些内容对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、出远门坐火车..                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-16">
+                            <div class="col-md-3">
+                                <a href="/news/article-75175.htm" class="xcblog-blog-url">
+                                    <img alt="读取spring的配置来定义常量" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-75175.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        读取spring的配置来定义常量                                    </h3>
+                                </a>
+                                <p>
+                                    问题背景 1、在spring配置中有一个【在线地址】的配置  2、有一个工具类，可以读取spring的配置  需求：将spring的配置定义为一个常量 问题分析 1、常量定义原则：要用final和st                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-16">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-3-16-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 3月16日23M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/105f920c4a52c86168fd60611ecae2fe.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-3-16-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 3月16日23M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、香港、新加坡、美国、韩国、欧洲、日本等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-15">
+                            <div class="col-md-3">
+                                <a href="/news/article-74490.htm" class="xcblog-blog-url">
+                                    <img alt="动物疫苗的作用有哪些呢英语 动物疫苗的作用有哪些呢英语翻译" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-74490.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        动物疫苗的作用有哪些呢英语 动物疫苗的作用有哪些呢英语翻译                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗的作用有哪些呢英语的问题，于是小编就整理了3个相关介绍动物疫苗的作用有哪些呢英语的解答，让我们一起看看吧。医院vet是什                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-15">
+                            <div class="col-md-3">
+                                <a href="/news/article-74488.htm" class="xcblog-blog-url">
+                                    <img alt="爬虫系列：爬虫验证码识别_在线工具" src="/uploads/20241222-1/82977253972095a20fc67c366bb8fa6d.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-74488.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        爬虫系列：爬虫验证码识别_在线工具                                    </h3>
+                                </a>
+                                <p>
+                                    读取验证码与训练 Tesseract 在上一篇文章中我们介绍了使用 Tesseract 如何识别格式规范的文字，在这篇文章中我们将详细介绍使用 Tesseract 如何识别图像验证码。 虽然大多数人对                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-15">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-3-15-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-3-15-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、香港、新加坡、美国、日本、加拿大、欧洲等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-03-14">
                             <div class="col-md-3">
                                 <a href="/news/article-73821.htm" class="xcblog-blog-url">
@@ -173,96 +263,6 @@
                                     摘要：       本篇文章给大家谈谈宠物粮食专卖店电话多少啊，以及宠物粮基地对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、乖宝宠物食品集团股份有限公司电话是多少?...                                  </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-13">
-                            <div class="col-md-3">
-                                <a href="/news/article-73151.htm" class="xcblog-blog-url">
-                                    <img alt="AndroidQ(10)黑暗模式适配" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-73151.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        AndroidQ(10)黑暗模式适配                                    </h3>
-                                </a>
-                                <p>
-                                    前言：作为一个Android程序员，每年最期待就是Google的发布会啦！！这不，今年的AndroidQ如期而至。这里简单介绍一下Android的新特性：  AndroidQ全局暗黑模式 隐私权限的更                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-13">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-13-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-13-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、日本、美国、新加坡、加拿大、韩国、欧洲等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-12">
-                            <div class="col-md-3">
-                                <a href="/news/article-72485.htm" class="xcblog-blog-url">
-                                    <img alt="动物免疫接种前应做哪些准备工作（动物免疫接种要注意什么）" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-72485.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        动物免疫接种前应做哪些准备工作（动物免疫接种要注意什么）                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       今天给各位分享动物免疫接种前应做哪些准备工作的知识，其中也会对动物免疫接种要注意什么进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、幼犬接.                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-12">
-                            <div class="col-md-3">
-                                <a href="/news/article-72483.htm" class="xcblog-blog-url">
-                                    <img alt="python内置函数有哪些？" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-72483.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        python内置函数有哪些？                                    </h3>
-                                </a>
-                                <p>
-                                    注：本文为转载文章，如有侵权请告知 本文来源：https://blog.csdn.net/frbevrqbn4l/article/details/78536887 &nbsp; Python中内置了很                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-12">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-12-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-12-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、新加坡、加拿大、韩国、日本、香港、欧洲等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-11">
-                            <div class="col-md-3">
-                                <a href="/news/article-71831.htm" class="xcblog-blog-url">
-                                    <img alt="做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-71831.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）                                    </h3>
-                                </a>
-                                <p>
-                                    摘要：       今天给各位分享做梦梦见办喜事是什么意思的知识，其中也会对做梦梦见办喜事是什么意思呀进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、梦见结婚.                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-03/page-2.htm">2</a></li><li><a href="/date/2025-03/page-3.htm">3</a></li><li><a href="/date/2025-03/page-4.htm">4</a></li><li><a href="/date/2025-03/page-5.htm">5</a></li> <li><a href="/date/2025-03/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-58313.htm" title="长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方">长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方</a></li>
-                        <li class="py-2"><a href="/news/article-70525.htm" title="动物疫苗品牌排名（动物疫苗品牌排名前十名）">动物疫苗品牌排名（动物疫苗品牌排名前十名）</a></li>
-                        <li class="py-2"><a href="/news/article-60611.htm" title="附近有没有养狗的（离我家最近的养狗场）">附近有没有养狗的（离我家最近的养狗场）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-6-free-v2ray-subscribe.htm" title="VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-v2ray-subscribe.htm" title="VPN设备 | 3月10日21.8M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月10日21.8M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-57746.htm" title="广州领养宠物的地方是哪里（广州有领养宠物猫的地方吗?）">广州领养宠物的地方是哪里（广州有领养宠物猫的地方吗?）</a></li>
-                        <li class="py-2"><a href="/news/article-57745.htm" title="青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）">青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）</a></li>
-                        <li class="py-2"><a href="/news/article-68547.htm" title="InnoDB的逻辑存储结构是什么，表空间组成包括哪些？_在线工具">InnoDB的逻辑存储结构是什么，表空间组成包括哪些？_在线工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-16-node-share.htm" title="VPN设备 | 2月16日18.8M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 2月16日18.8M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share.htm" title="VPN设备 | 3月14日21M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 3月14日21M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-20-node-share-links.htm" title="VPN设备 | 2月20日18.8M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 2月20日18.8M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-71162.htm" title="简单聊一聊Vue3组件更新过程_vue.js">简单聊一聊Vue3组件更新过程_vue.js</a></li>
+                        <li class="py-2"><a href="/news/article-71165.htm" title="兽药厂家排名前十强产品 兽药厂家排名前十强产品有哪些">兽药厂家排名前十强产品 兽药厂家排名前十强产品有哪些</a></li>
+                        <li class="py-2"><a href="/news/article-67292.htm" title="有限体积法求解一维非稳态对流扩散方程">有限体积法求解一维非稳态对流扩散方程</a></li>
                         <li class="py-2"><a href="/news/article-69855.htm" title="vue中同时监听多个参数的实现_vue.js">vue中同时监听多个参数的实现_vue.js</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-15-node-share.htm" title="VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月15日20.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-high-speed-nodes.htm" title="VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-free-v2ray-subscribe.htm" title="VPN设备 | 3月11日22M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 3月11日22M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-66661.htm" title="开动物医院什么资质可以开药（开动物医院什么资质可以开药店）">开动物医院什么资质可以开药（开动物医院什么资质可以开药店）</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">48</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
